--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -1,4 +1,4 @@
-en:
+vi:
   count_review: "%{count} reviews"
   title: "Book Review System"
   messenger: "sorry, Not found !"
@@ -8,17 +8,17 @@ en:
   pass_reset: "Password reset"
   sure: "You a sure!"
   error: "An error has occurred, please try again!"
-  statistics_like: "Statistics of book likes"
-  statistics_review: "Statistics of book reviews"
-  statistics_user: "Statistics user"
-  statistics_status: "Statistics status"
+  statistics_like: "Thống kê lượt thích sách"
+  statistics_review: "Thống kê đánh giá sách"
+  statistics_user: "Thống kê người dùng"
+  statistics_status: "Thống kê trạng thái"
   my_requests: "My Suggest"
   thing: "Things To Know About Green Flat Design"
-  home: "Home"
-  category: "Category Management"
-  book: "Book Management"
-  user: "User Management"
-  suggest: "Suggest Management"
+  home: "Trang Chủ"
+  category: "Quản Lý Thể Loại"
+  book: " Quản lý Sách"
+  user: "Quản Lý Người Dùng"
+  suggest: "Quản lý yêu cầu"
   dates:
     formats:
       date_month_year_concise: '%d-%m-%y'
@@ -45,17 +45,17 @@ en:
       activities: "Activity"
       admin: "Admin"
       signup: "Sign Up"
-      search_book: "Search name book ..."
-      search_category: "Search category ..."
-      search_author: "Search author ..."
-      search: "Search"
+      search_book: "Tìm kiếm tên sách ..."
+      search_category: "Tìm kiếm tên thể loại ..."
+      search_author: "Tìm kiếm tên tác giả ..."
+      search: "Tìm kiếm"
     header_admin:
       sun*: "Sun Asterisk"
       hi: "Xin Chào, "
     left_admin:
       home: "Trang Chủ"
       category: "Quản Lý Danh Mục"
-      book: " Quản Lý Truyện"
+      book: " Quản Lý Sách"
       user: "Quản Lý Người Dùng"
       suggest: "Quản Lý yêu Cầu"
       comment: "Quản Lý Comment"
@@ -171,11 +171,11 @@ en:
   view:
     admin:
       book:
-        search_book: "Search name book ..."
-        search_category: "Search category ..."
-        search_author: "Search author ..."
+        search_book: "Tìm kiếm tên sách ..."
+        search_category: "Tìm kiếm tên thể loại ..."
+        search_author: "Tìm kiếm tên tác giả ..."
       category:
-        search_category: "Search category"
+        search_category: "Tìm kiếm tên thể loại ..."
         delete: "Delete"
         restore: "Restore"
       user:
@@ -183,7 +183,7 @@ en:
         search_email: "Search mail ..."
         selection_role: "Selection role"
         sign_up: "Create User"
-      submit_search: "Search"
+      submit_search: "Tìm kiếm"
     shared:
       following: "following"
       followers: "followers"
@@ -264,7 +264,6 @@ your password will stay as it is."
         cepteur sint occaecat cupidatat."
     likes:
       like: "Like"
-      unlike: "Like"
     sessions:
       login: "Log in"
       signup : "Sign up now!"
@@ -292,7 +291,7 @@ your password will stay as it is."
       new_review: "New Review Book:"
       edit_review: "Edit Reviews Book:"
       edit: "Edit"
-      delete: ""
+      delete: "Delete"
       sure: "Are you sure ? "
       ago: "ago"
       cmt: "comment"
@@ -304,8 +303,6 @@ your password will stay as it is."
         create: "add like to"
       review:
         create: "add review to"
-      suggest:
-        create: "add suggest to"
     activities:
       index_activity: "List Activities"
     suggests:
@@ -332,9 +329,9 @@ your password will stay as it is."
   admin:
     static_pages:
       index:
-        admin_layout: "ADMINISTRATOR"
-        category: "Category Management"
-        book: "Book Management"
+        admin_layout: "TRANG QUẢN TRỊ VIÊN"
+        category: "Quản Lý Thể Loại"
+        book: "Quản lý sách"
         user: "Quản lý người dùng"
         suggest: "Quản lý yêu cầu"
         comment: " comment/reply"
@@ -350,59 +347,59 @@ your password will stay as it is."
         category: "Danh mục"
         id: "ID"
       edit:
-        edit_book: "Edit Book"
+        edit_book: "Cập nhật thông tin của sách"
       index:
-        add: "ADD BOOK"
+        add: "Thêm sách"
         id: "ID"
-        name: "Name Book"
-        category: "Name Category"
-        author: "Author"
-        image: "image"
-        action: "Action"
-        edit: "Edit"
-        delete: "Delete"
+        name: "Tên Sách"
+        category: "Tên Thể Loại"
+        author: "Tác Giả"
+        image: "Hình Ảnh"
+        action: "Hoạt Động"
+        edit: "Sửa"
+        delete: "Xóa"
       new:
-        add_book: "Add Book"
+        add_book: "Thêm sách"
       form:
-        book_title: "Name Book"
-        description: "Description"
-        content: "Content"
-        author: "Author"
-        publisher: "Publisher"
-        rate_points: "Rate Points"
-        number_pages: "Number Pages"
-        submit_update: "Update Book"
-        submit_add: "Add Book"
+        book_title: "Tên Sách"
+        description: "Tóm Tắt"
+        content: "Nội Dung"
+        author: "Tác Giả"
+        publisher: "Nhà Sản Xuất"
+        rate_points: "Điểm Đánh Giá"
+        number_pages: "Số Trang Sách"
+        submit_update: "Cập Nhật Sách"
+        submit_add: "Thêm Sách"
     categories:
       delete: " Delete"
-      edit: "Sửa Danh Mục"
+      add: "Thêm thể loại"
       name: "Tên Danh Mục"
       id: "ID"
-      category_name: Name Category
-      action: "Action"
-      add_category: "Add Category"
-      delete_category: "Delete"
-      restore_category: "Restore"
+      category_name: "Tên Thể Loại"
+      action: "Hoạt Động"
+      add_category: "Thêm thể loại"
+      delete_category: "Xóa"
+      restore_category: "Phục Hồi"
     users:
-      setuser: "setUser"
-      setadmin: "setAdmin"
-      add_user: "Add User"
-      delete: "Delete"
+      setuser: "Người dùng"
+      setadmin: "Quản Trị Viên"
+      add_user: "Thêm Người Dùng"
+      delete: "Xóa"
       id: "ID"
-      user_name: "User Name"
-      email: "Email"
-      role: "Role"
-      action: "Action"
-      user: "User Management"
-      search_user: "Search for users"
+      user_name: "Tên Người Dùng"
+      email: "Địa Chỉ Email"
+      role: "Quyền"
+      action: "Hoạt Động"
+      user: "Quản lý người dùng"
+      search_user: "Tìm kiếm người dùng"
     suggests:
-      suggest: "Suggest Management"
+      suggest: "Quản Lý Yêu Cầu"
       id: "ID"
-      name_book: "Name Book"
-      name_category: "Name Category"
-      user_name: "User Name"
-      status: "Status"
-      action: "Action"
+      name_book: "Tên Sách"
+      name_category: "Tên Thể Loại"
+      user_name: "Tên Người Dùng"
+      status: "Trạng Thái"
+      action: "Hoạt Đông"
   activerecord:
     errors:
       models:
